# Finch

./: .gitignore  Finch.py  Finch_functions.py  LICENSE  README.md  example.py  example_code.py  pyproject.toml  requirements_3.12.5.txt  requirements_3.8.8.txt
dataset_test/: table_star1.csv  table_star2.csv  table_star3.csv  table_star4.csv  table_star5.csv  table_star6.csv  table_star7.csv
finch/: Finch.py  Finch_GP.py  Finch_functions.py  Finch_variables.py  __init__.py
finch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
finch/test_dataset/: Finch_input_HD128621.csv  Solar_Mg2.csv
