[build-system]
requires = ["setuptools", "wheel"] # setuptools and wheel are necessary for the build

[project]
name = "finch"
version = "2.0.3"
description = "A package to fit magnetic cycles on the MHK activity index coming from multi-instrument levels"
authors = [
    {name = "Michael Cretignier", email = "michael.cretignier@physics.ox.ac.uk"}
]
readme = "README.md"
license = {text = "MIT"}

requires-python = "==3.12.5" 

keywords = [
    "astronomy",
    "stellar activity",
    "magnetic cycles",
    "spectroscopy",
    "exoplanets",
    "activity proxy",
    "chromospheric activity",
    "time-series analysis"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [

    # ===============================
    # Python 3.12.5 environment
    # ===============================
    "pandas==2.3.2; python_version >= '3.12'",
    "numpy==1.26.4; python_version >= '3.12'",
    "astropy==7.1.0; python_version >= '3.12'",
    "scipy==1.16.2; python_version >= '3.12'",
    "matplotlib==3.10.6; python_version >= '3.12'",
    "ipython==9.5.0; python_version >= '3.12'",
    "colorama==0.4.6; python_version >= '3.12'",
    "scikit-learn==1.7.2; python_version >= '3.12'",

    # ===============================
    # Python 3.8.8 environment
    # ===============================
    "pandas==1.4.1; python_version < '3.9'",
    "numpy==1.23.5; python_version < '3.9'",
    "astropy==5.2.2; python_version < '3.9'",
    "scipy==1.8; python_version < '3.9'",
    "matplotlib==3.5; python_version < '3.9'",
    "ipython==7.22.0; python_version < '3.9'",
    "colorama==0.4.4; python_version < '3.9'",
    "scikit-learn==0.24.1; python_version < '3.9'",
]

[project.urls]
Source = "https://github.com/MichaelCretignier/FINCH"

[project.scripts] # Define scripts here if you have any

[project.optional-dependencies] # Define optional dependencies here if you have any

